--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+#root{
+  background-color: blanchedalmond;
+  display: grid;
+  grid-template-columns: auto ,auto, auto , auto;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#Bots{
+  display: grid;
+  grid-template-columns: auto , auto ,auto, auto ;
 }
